# Raytracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  csg.ppm  glass.ppm  json_scene.ppm  raytracer  test_output.ppm
include/raytracer/: aabb.hpp  area_light.hpp  bvh.hpp  camera.hpp  csg.hpp  hit.hpp  image_output.hpp  light.hpp  material.hpp  mesh.hpp  png_writer.hpp  ray.hpp  raytracer.hpp  renderer.hpp  scene.hpp  scene_loader.hpp  shape.hpp  sphere.hpp  triangle.hpp  vec3.hpp
scenes/: example.json  path_trace_example.json
src/: main.cpp
